<resources>
    <string name="app_name">OTP Verification FireBase</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_phone_number_and_check_message_box_we_sent_a_4_digit_otp">Enter your phone number and check message box we sent a 4 digit OTP</string>
    <string name="_880">+880</string>
    <string name="num_text">17***********</string>
    <string name="send_otp_btn_text">Send OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="check_your_inbox_we_sent_4_digit_otp_get_it_and_past_on_otp_field">Check your Inbox we sent 4 digit OTP Below number Get It and paste on OTP Field </string>
    <string name="get_verify">Get Verify</string>
    <string name="don_t_recived_otp">Don\'t Recived OTP?</string>
    <string name="resend">Resend</string>
    <string name="_01787044199">01787044199</string>
</resources>