<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".OtpVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginTop="140dp"
            android:src="@drawable/mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/get_otp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/check_your_inbox_we_sent_4_digit_otp_get_it_and_past_on_otp_field"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01787044199"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />


        <com.mukeshsolanki.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="14sp"
            android:visibility="visible"
            app:OtpHideLineWhenFilled="false"
            app:OtpItemCount="4"
            app:OtpItemSpacing="8dp"
            app:OtpLineColor="#03BCFF"
            app:OtpState_filled="true"
            app:OtpViewType="rectangle" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/don_t_recived_otp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/resend"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verifyOtpBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/get_verify"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>