<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="140dp"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_otp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/enter_your_phone_number_and_check_message_box_we_sent_a_4_digit_otp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/_880"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                />
            <EditText
                android:id="@+id/edNumber"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:hint="@string/num_text"
                android:layout_marginStart="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:background="@null"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:shadowRadius="10"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendOtpBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/send_otp_btn_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"

            />



    </LinearLayout>


</LinearLayout>